[package]
name = "limg"
version = "0.1.0"
edition = "2024"
license = "MIT"

description = "limg image package"
readme = "README.md"
repository = "https://github.com/limg-projects/limg-rs"
publish = false

[features]
default = ["std"]
std = []

[dependencies]
limg-core = { git = "https://github.com/limg-projects/limg-core-rs", tag = "v0.1.1" }